Version next
* Update locales for new strings.
* Updated translations for: bg-BG, el, es-ES, it-IT, ja-JP, nb-NO, pl, ro, ru

Version 2011.07.03.16b
* Integrate with Firefox's URL trimming.
* Separate built-in preferences into their own block.
* Add a progress line to the download button.
* Update locales for new strings.

Version 2011.06.28.22
* Hide preferences that aren't supported by a particular version of Firefox.

Version 2011.06.22.19b
* Firefox 7.0a1 changed the nsIDOMWindow interface ID. Make S4E compatible.
* Fix progress bar when opening a link in a new window.
* Update locales for new strings.
* Updated translations for: cs, da, es-ES, he, hsb-DE, hu, it-IT, nb-NO, ro, sr, sv-SE

Version 2011.06.13.19b
* Tweak some preference UI strings.
* Rewrite the CSS background editor using XBL.
* Add background-repeat support to the simple editor.
* Add background-position support to the simple editor.
* Add preview progress bar to the editor.
* Add a preference to control Firefox's domain highlighting in the location bar.
* Add a preference to control statusbar-display mirroring on mouse-over.
* Add a preference to control statusbar-display mirroring on find bar open.
* Updated translations for: sr

Version 2011.05.07.18b
* Firefox 6.0a1 changed the nsIDOMWindow interface ID. Make S4E compatible.
* Fix unchecked usage of the urlbar element (causes errors when it's not on a toolbar).
* Minimize contact with the XULBrowserWindow object, and make binding to it dynamic and [hopefully] more robust.
* Refactor some repetitive code, and use array based generation/execution for repetitive tasks.
* Added translations for: el, es-ES, he, nb-NO
* Updated translations for: ro

Version 2011.04.06.18
* Make sure the urlbar placeholder text is hidden when showing link/status.
* Add new strings for all translations.
* Added translations for: cs, ru

Version 2011.04.02.18b
* Add strings that were removed from Firefox 4.2a1pre.
* Centralize stringbundle DOM calls.