@@ -90,6 +90,10 @@
 <!ENTITY status4evar.download.label.force.label "Always show the button text">
 <!ENTITY status4evar.download.label.label "Download status button text:">
 <!ENTITY status4evar.download.tooltip.label "Download status button tooltip:">
+<!ENTITY status4evar.download.progress.label "Show download progress on the button">
+<!ENTITY status4evar.download.progress.average.label "Show average download completion">
+<!ENTITY status4evar.download.progress.max.label "Show most complete download">
+<!ENTITY status4evar.download.progress.min.label "Show least complete download">
 <!ENTITY status4evar.download.color.active.label "Progress color for active downloads:">
 <!ENTITY status4evar.download.color.paused.label "Progress color for paused downloads:">
 
