@@ -7,6 +7,7 @@ pref("status4evar.download.color.paused", "#808080");
 pref("status4evar.download.force", false);
 pref("status4evar.download.label", 0);
 pref("status4evar.download.label.force", true);
+pref("status4evar.download.progress", 1);
 pref("status4evar.download.tooltip", 1);
 
 pref("status4evar.firstRun", true);
